fix: align header's icons in <readme>.

--- a/src/app/pages/readme/readme.component.scss
+++ b/src/app/pages/readme/readme.component.scss
@@ -1,6 +1,6 @@
 .title {
   display: flex;
-  align-items: end;
+  align-items: center;
 
   & mat-chip {
     margin-left: 24px;
